<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.wilderarias.calculadoraderesistencias.MainActivityPunto4">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <EditText
            android:id="@+id/ebanda1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/banda1"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/ebanda2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/banda2"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/emultiplicador"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/Multiplicad"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/etolerancia"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/tolerancia"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/sbanda1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">


        </Spinner>

        <Spinner
            android:id="@+id/sbanda2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">


        </Spinner>

        <Spinner
            android:id="@+id/smultiplicador"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">


        </Spinner>

        <Spinner
            android:id="@+id/stolerancia"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">


        </Spinner>

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="25dp">
    <TextView
        android:layout_width="97dp"
        android:layout_height="match_parent"
        android:text="@string/valorResistencia"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/eResultados"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">
        <TextView
            android:layout_width="97dp"
            android:layout_height="match_parent"
            android:text="@string/valorTolerancia"
            android:textSize="18sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/eResultTole"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/black"
            />
    </LinearLayout>

</LinearLayout>
